[package]
name = "menu"
version = "0.1.0"
edition = "2024"
authors = ["klarex"]
repository = "https://github.com/Klarexxx/Android-Imgui-Mod-Menu-rs"
license = "GPL-3.0-or-later"

[dependencies]
android_logger = "0.15.1"
dobby-rs = "0.1.0"
egl = "0.2.7"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
jni = "0.21.1"
kittymemory-rs = "0.2.6"
log = "0.4.29"
ndk = "0.9.0"
ndk-sys = "0.6.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
debug = false
codegen-units = 1
panic = "abort"
opt-level = "s"
